data/test/method_as_function/positive/7000.js
// This tests path parameters of type string
const axios = require('axios');
axios.get('https://petstore.swagger.io/v2/customers/johndoe');