data/test/method_as_function/negative/9500.js
// This tests paths with a dot
const axios = require('axios');
axios.get('https://petstore.swagger.io/v2/emoji_list');